<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="56dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/naked" 
            android:contentDescription="@string/dscAvatar"/>

        <TextView
            android:id="@+id/tvStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivAvatar"
            android:text="@string/STRempty" />

        <TextView
            android:id="@+id/tvConstitution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStrength"
            android:layout_toRightOf="@id/ivAvatar"
            android:text="@string/CONempty" />

        <TextView
            android:id="@+id/tvDexterity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvConstitution"
            android:layout_toRightOf="@id/ivAvatar"
            android:text="@string/DEXempty" />

        <TextView
            android:id="@+id/tvInteligence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDexterity"
            android:layout_toRightOf="@id/ivAvatar"
            android:text="@string/INTempty" />

        <TextView
            android:id="@+id/tvAgility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInteligence"
            android:layout_toRightOf="@id/ivAvatar"
            android:text="@string/AGIempty" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvName"
        style="@style/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lblName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSex"
        style="@style/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblSex" />

    <Spinner
        android:id="@+id/spSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/aSex" />

    <TextView
        android:id="@+id/tvJob"
        style="@style/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblJob" />

    <Spinner
        android:id="@+id/spJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/aJob" />

    <TextView
        android:id="@+id/tvEyes"
        style="@style/tvLabel"
        android:text="@string/lblEyes" />

    <Spinner
        android:id="@+id/spEyes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/aEyes" />

    <TextView
        android:id="@+id/tvHair"
        style="@style/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblHair" />

    <Spinner
        android:id="@+id/spHair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/aHair" />

    <Button
        android:id="@+id/btnQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startQR"
        android:text="See QR" 
        android:layout_gravity="center_horizontal"/>
 
</LinearLayout>